# CodexPPP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOVER.md  README.md  README_EN.md  YHYQ.md
.github/workflows/: pr-build.yml
apps/codex-plus-launcher/src/: main.rs
apps/codex-plus-manager/: package-lock.json  package.json
apps/codex-plus-manager/src/: App.tsx  i18n-en.ts  main.tsx  model-windows.test.ts  presets.ts  provider-sync-flow.test.ts  provider-sync-flow.ts  styles.css
apps/codex-plus-manager/src-tauri/: tauri.conf.json
apps/codex-plus-manager/src-tauri/src/: commands.rs  lib.rs  main.rs
assets/inject/: renderer-inject.js
crates/codex-plus-core/src/: ads.rs  app_paths.rs  assets.rs  autostart.rs  bridge.rs  ccs_import.rs  cdp.rs  codex_sqlite.rs  diagnostic_log.rs  launcher.rs  lib.rs  model_catalog.rs  ports.rs  protocol_proxy.rs  provider_import.rs  relay_config.rs  relay_environment.rs  routes.rs  settings.rs  update.rs  watcher.rs  windows_integration.rs  workspace_performance.rs
crates/codex-plus-core/tests/: ads.rs  bridge_routes.rs  cdp_bridge.rs  force_chinese_locale_settings.rs  installers.rs  launcher.rs  protocol_proxy.rs  relay_config.rs  relay_switch.rs  updater.rs  watcher.rs
crates/codex-plus-data/: Cargo.toml
crates/codex-plus-data/src/: lib.rs  provider_sync.rs  storage.rs
crates/codex-plus-data/tests/: provider_sync.rs  storage_adapter.rs
docs/superpowers/plans/: 2026-05-16-rust-tauri-migration.md
scripts/installer/windows/: CodexPlusPlus.nsi
tools/: i18n-keys.json
(+8 files in other folders)
